--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -94,10 +94,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SGDClassifier(alpha=0.0001, average=False, class_weight=None,\n",
+       "              early_stopping=False, epsilon=0.1, eta0=0.0, fit_intercept=True,\n",
+       "              l1_ratio=0.15, learning_rate='optimal', loss='hinge',\n",
+       "              max_iter=1000, n_iter_no_change=5, n_jobs=None, penalty='l2',\n",
+       "              power_t=0.5, random_state=42, shuffle=True, tol=0.001,\n",
+       "              validation_fraction=0.1, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Classify only number 8\n",
+    "y_train_8 = (y_train == 8)\n",
+    "y_test_8 = (y_test == 8)\n",
+    "\n",
+    "#try stochastic gradient descent to train the network\n",
+    "\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "\n",
+    "sgd_clf = SGDClassifier(random_state = 42)\n",
+    "sgd_clf.fit(X_train, y_train_8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Accuracy measures\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.85245738, 0.9276    , 0.94119706])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Accuracy \n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "cross_val_score(sgd_clf, X_train, y_train_8, cv=3, scoring=\"accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[50135,  4014],\n",
+       "       [ 1561,  4290]], dtype=int64)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Confusion matrix\n",
+    "from sklearn.model_selection import cross_val_predict\n",
+    "\n",
+    "y_train_pred = cross_val_predict(sgd_clf, X_train, y_train_8, cv=3)\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(y_train_8, y_train_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5166184971098265\n",
+      "0.7332079986327124\n"
+     ]
+    }
+   ],
+   "source": [
+    "#precision and recall\n",
+    "#PRECISION = TP/(TP+FP)\n",
+    "#RECALL = TP/(TP+FN)\n",
+    "\n",
+    "from sklearn.metrics import precision_score, recall_score\n",
+    "\n",
+    "print(precision_score(y_train_8, y_train_pred))\n",
+    "\n",
+    "print(recall_score(y_train_8, y_train_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6061462380784175"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#F1 score: precision and recall combined, harmonic mean of precision and recall. It gives much more weight to\n",
+    "#low values\n",
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "f1_score(y_train_8, y_train_pred)"
+   ]
   }
  ],
  "metadata": {
